# openshift_sts_json

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  deploy-template.yaml  pyproject.toml  setup.cfg
src/: server.py  sts_router.py  uvicorn_conf.py
src/templates/4.7/: 05-0-openshift-machine-api-aws-cloud-credentials-role.json  05-1-openshift-cloud-credential-operator-cloud-credential-operator-iam-ro-creds-role.json  05-2-openshift-image-registry-installer-cloud-credentials-role.json  05-3-openshift-ingress-operator-cloud-credentials-role.json  05-4-openshift-cluster-csi-drivers-ebs-cloud-credentials-role.json  06-0-openshift-machine-api-aws-cloud-credentials-policy.json  06-1-openshift-cloud-credential-operator-cloud-credential-operator-iam-ro-creds-policy.json  06-2-openshift-image-registry-installer-cloud-credentials-policy.json  06-3-openshift-ingress-operator-cloud-credentials-policy.json  06-4-openshift-cluster-csi-drivers-ebs-cloud-credentials-policy.json
